--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clocker",
   "description": "A simple clock with somes information",
   "version": "1.0.0",
-  "author": "Le_Futuriste <spamfree@matthieubessat.fr>",
+  "author": "Le_Futuriste <contact@lefuturiste.fr>",
   "license": "MIT",
   "private": true,
   "scripts": {
